[package]
name = "ipscan-rs"
version = "0.1.0"
edition = "2024"
description = "Network scanner inspired by Angry IP Scanner"
license = "GPL-3.0"
repository = "https://github.com/liberodark/ipscan-rs"
readme = "README.md"
keywords = ["network", "scanner", "port-scanner", "ip-scanner", "network-tools"]
categories = ["command-line-utilities", "network-programming"]

[[bin]]
name = "ipscan-rs"
path = "src/main.rs"

[[bin]]
name = "ipscan-rs-gui"
path = "src/gui.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.42", features = ["full"] }
pnet = "0.35"
dns-lookup = "2.0"
surge-ping = "0.8"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = "0.3"
eframe = "0.32"
egui = "0.32"
egui_extras = "0.32"
rfd = "0.15"
chrono = "0.4"

[profile.release]
strip = true
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[lints.rust]
unsafe_code = "deny"
unused_imports = "deny"
